--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -6,6 +6,7 @@
     border: 1px solid #ececec;
     background-color: #2a2a2b;
     color: white;
+    color: white;
     border-radius: 12px;
     align-items: center;
     justify-content: center;
