expense_items_change

--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -7,6 +7,7 @@
     background-color: #2a2a2b;
     color: white;
     border-radius: 12px;
+    font-weight: 100;
     align-items: center;
     justify-content: center;
   }
